footer corrections done

--- a/about.html
+++ b/about.html
@@ -119,10 +119,10 @@
     </div>
     <!-- /.offcanvas-info -->
     <div class="wrapper image-wrapper bg-image page-title-wrapper inverse-text"
-      data-image-src="style/images/art/bg4.jpg">
+      data-image-src="style/images/banner.jpg">
       <div class="container inner text-center">
         <div class="space90"></div>
-        <h1 class="page-title">We are Contact Us</h1>
+        <h1 class="page-title">We are Itech Solutions</h1>
         <p class="lead">A company that Solves all your tech needs.</p>
       </div>
       <!-- /.container -->
@@ -260,7 +260,8 @@
         <div class="row">
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <img src="#" srcset="style/images/logo-light.png 1x, style/images/logo-light@2x.png 2x" alt="" />
+              <!-- <img src="#" srcset="style/images/logo-light.png 1x, style/images/logo-light@2x.png 2x" alt="" /> -->
+              <h2>Itech Solutions</h2>
               <div class="space40"></div>
               <p>© 2020 Itech Solutions <br class="d-none d-lg-block" />All rights reserved.</p>
             </div>
