--- a/index.html
+++ b/index.html
@@ -311,7 +311,8 @@
         <div class="row">
           <div class="col-md-4 col-lg-3">
             <div class="widget">
-              <img src="#" srcset="style/images/logo-light.png 1x, style/images/logo-light@2x.png 2x" alt="" />
+              <!-- <img src="#" srcset="style/images/logo-light.png 1x, style/images/logo-light@2x.png 2x" alt="" /> -->
+              <h2>Itech Solutions</h2>
               <div class="space40"></div>
               <p>© 2020 Itech Solutions <br class="d-none d-lg-block" />All rights reserved.</p>
             </div>
